add feature vertify otp and update cache service
