# internal/services/auth/application/command/dto/request/verify_otp_request.go
@@ -1,0 +1,6 @@
+package authcommandrequest
+
+type VerifyOTPRequest struct {
+	Email string `json:"email" binding:"required,email"`
+	OTP   string `json:"otp" binding:"required"`
+}
