# internal/services/auth/controller/auth_http.go
@@ -15,9 +15,7 @@ func InitAuthRouter(rg *gin.RouterGroup, container *initialize.AppContainer) {
 	authRouterPublic := rg.Group("/auth")
 	{
 		authRouterPublic.POST("/register", authCommandHandler.Register)
-		// userRouterPublic.POST("/verify_account", account.Login.VerifyOTP)
-		// userRouterPublic.POST("/update_pass_register", account.Login.UpdatePasswordRegister)
-		// userRouterPublic.POST("/login", account.Login.Login) // login -> YES -> No
+		authRouterPublic.POST("/verify-account", authCommandHandler.VerifyOTP)
 	}
 
 	// private router
